# bevy_model_viewer

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
assets/models/terrain/: Mountains.gltf
src/: main.rs
