[package]
name = "bevy_model_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_egui = "0.22.0"
bevy_flycam = "0.11.0"
walkdir = "2.4.0"

[workspace]
resolver = "2" # wgpu / bevy needs this

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
